--- a/data/config.json
+++ b/data/config.json
@@ -3,15 +3,21 @@
   "levels": {
     "easy": { "num_digit": 4, "max_attempts": 10, "total_time": 1200 },
     "medium": { "num_digit": 6, "max_attempts": 8, "total_time": 900 },
-    "hard": { "num_digit": 8, "max_attempts": 6, "total_time": 50 }
+    "hard": { "num_digit": 8, "max_attempts": 6, "total_time": 600 }
+  },
+  "scoreboard": {
+    "wins": 0,
+    "losses": 0
   },
   "messages": {
+    "username": "Please enter your username: ",
+    "current_score": "Your current score is {wins} wins and {losses} losses",
     "welcome": "Welcome to Mastermind!",
     "rules": "Try to guess the {num_digit}-number combination within {total_time} minutes!!! Numbers range from 0 to 7.",
     "start": "Alright, let's begin!",
     "game_over": "Game over! The correct combination was: ",
     "correct_guess": "Congratulations! You Win!",
-    "incorrect_guess": "You almost had it, try again",
+    "incorrect_guess": "All the numbers from your guess were incorrect",
     "input": "Enter your guess ({num_digit} numbers, separated by spaces): ",
     "invalid_input": "Make sure you input {num_digit} numbers between 0 and 7.",
     "input_level": "Enter difficulty: easy, medium, or hard ",
